# tangle.js

./: .eslintrc.js  .gitignore  .npmignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/: CONTRIBUTING.md  SUPPORT.md
anchoring-channels/: package-lock.json  package.json
es/: index.js  iotaAnchoringChannel.js  iotaLdProof.js  iotaLdProofGenerator.js  iotaLdProofVerifier.js  iotaProofGenerator.js  iotaProofVerifier.js  iotaSigner.js
examples/: README.md  anchors-example-run.js  anchors-example.js  anchors-test.js  iota-ld-proofs-example-run.js  iota-ld-proofs-example.js  ld-signatures-example-run.js  ld-signatures-example.js  package-lock.json  package.json
examples-stardust-inx/: .gitignore  README.md  env-template  package-lock.json  package.json
identity-rust/identity_examples/: Cargo.toml
identity-rust/identity_examples/src/: main.rs  utils.rs
linked-data-proofs/: README.md
postman-collections/: IOTA-Node.postman_collection.json
schemas/: did-document-schema.json  identity-inx-schema.json
src/: IAnchoringRequest.ts  IFetchRequest.ts  IFetchResult.ts  anchorError.ts  anchorMsgService.ts  channelHelper.ts  fetchMsgService.ts  index.ts  iotaAnchoringChannel.ts  iotaLdProof.ts  iotaLdProofGenerator.ts  iotaLdProofVerifier.ts  iotaProofGenerator.ts  iotaProofVerifier.ts  iotaSigner.ts  iotaVerifier.ts
test/: anchor.test.ts  fetch.active.test.ts  fetch.test.ts  ldProofGenerator.active.test.ts  ldProofGenerator.test.ts  ldProofVerifier.active.test.ts  ldProofVerifier.test.ts  proofGenerator.test.ts  signer.test.ts  (+7 more)
(+465 files in other folders)
