[package]
name = "identity_examples"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
identity_eddsa_verifier = { version = "1.0.0", features = ["ed25519"] }
identity_iota = { version = "1.0.0", default-features = false, features = [ "memstore", "domain-linkage", "revocation-bitmap", "status-list-2021", "iota-client", "resolver"] }
identity_stronghold = { version = "1.0.0", default-features = false }
iota-sdk = { version = "1.1", default-features = false, features = ["tls", "client", "stronghold"] }
tokio = { version = "1.29", default-features = false, features = ["rt"] }
serde_json = { version = "1.0", default-features = false }
serde = { version="1.0.197" }
rand = "0.8.5"

primitive-types = "0.12.1"
sd-jwt-payload = { version = "0.2.0", default-features = false, features = ["sha"] }

[lib]
path = "src/utils.rs"
